# application-tracking-tool

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: Taskfile.yml  db.dockerfile  psql.sh
backend/att-backend/: Taskfile.yml  coverage.ini  pyproject.toml  pytest.ini
backend/att-backend/src/: main.py
backend/att-backend/src/foundation/: __init__.py  common.py
backend/att-backend/src/foundation/models/: __init__.py  database.py  relations.py
backend/att-backend/src/foundation/schemas/: __init__.py  countries.py  meta.py
backend/att-backend/src/routing/v1/: __init__.py  endpoints.py
backend/att-backend/tests/: test_countries.py  test_main.py  test_meta.py
backend/att-backend/tests/models/: test_database.py
backend/att-backend/tests/routing/v1/: test_endpoints.py
