[project]
name = "att-backend"
version = "0.1.0"
description = "Application Tracking Tool Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pg8000>=1.31.2",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    "sqlalchemy[mypy]>=2.0.40",
    "uvicorn>=0.34.2",
]

[tool.black]
line-length = 80
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"
